reports/CajaEjercicios.log
Traceback (most recent call last):
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/asyncio/base_events.py", line 568, in run_until_complete
    return future.result()
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from OptMultiple import MultipleChoice
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m"/home/jebarrios/anaconda3/envs/QCI/lib/python3.7/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m3552[0m, in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

[0;36m  File [0;32m"/tmp/ipykernel_897401/557516506.py"[0;36m, line [0;32m1[0;36m, in [0;35m<module>[0;36m[0m
[0;31m    from OptMultiple import MultipleChoice[0m

[0;36m  File [0;32m"/home/jebarrios/TQMex Dropbox/Jose Eduardo Barrios Vargas/FQ-UNAM/2_github/Cuantica-I/OptMultiple.py"[0;36m, line [0;32m30[0m
[0;31m    s += "<p><span class="math notranslate nohighlight">%s</span></p>" % self.question[0m
[0m                             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (OptMultiple.py, line 30)

